# egos

./: .editorconfig  .egos-manifest.yaml  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .mcp.json  .obsidian-llm-config.json  .pre-commit-config-dir-structure.yaml  .pre-commit-config.yaml  .ssot-map.yaml  .windsurfrules  .windsurfrules_atrian_section  ADRS_Log.md  AGENTS.md  ANALYSIS_COMPLETE_HANDOFF.md  ARCHIVE_POLICY.md  ATRIA.MD  ATRiANplan.md  BLOCKER_STATUS_RESOLVED.md  BLUEPRINT_ANALYSIS_INDEX.md  BLUEPRINT_ANALYSIS_SUMMARY.txt  BLUEPRINT_EXECUTION_ANALYSIS.md  BLUEPRINT_EXECUTION_PLAN.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_MASTER_PLAN.md  CODEOWNERS  CODEX_MASTERY_GUIDE_2026-04-03.md  CODE_OF_CONDUCT.md  COMMONS_EXECUTION_SUMMARY.md  COMMONS_MVP_GAP_ANALYSIS.md  COMMONS_SESSION_REPORT_2026-03-31.md  COMPLETE_REPO_INVENTORY_2026-04-03.md  CONTRIBUTING.md  DiagEnio.md  EGOS-111-COMPLETION-SUMMARY.md  EGOS-Global.code-workspace  EGOS_Workflow_Automation_Concepts.md  EXECUTIVE_SUMMARY_FOCUS_PLAN_2026-04-03.md  (+51 more)
.claude/: batch-setup-all-repos.sh  settings.json  setup-leaf-repo.sh  skill-automation.json
.cursor/: check_log.bat  check_mcp_connection.js  cursor_initialization.md  force_mcp_connection.bat  init-mcp.bat  install_dependencies.bat  mcp.json  mcp.json.backup  mcp.json.backup2  mcp_connection.js  openrouter_demo.bat  settings.json  start_mcp.js  start_mcp_service.bat  start_openrouter_mcp.bat  start_openrouter_mcp_background.bat  startup.py  stop_mcp_service.bat  stop_openrouter_mcp.bat  test_free_models.bat  test_openrouter_client.bat  test_openrouter_direct.bat  test_openrouter_direct.js  test_openrouter_mcp_server.bat  test_openrouter_simple.bat  verify_mcp_connection.bat  verify_mcp_server.js
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.guarani/: PREFERENCES.md  RULES_INDEX.md  mcp-config.json
.husky/: doc-drift-check.sh  focus-enforcement  post-commit  pre-commit  pre-push
.playwright-mcp/: page-2026-04-06T10-49-50-249Z.yml  page-2026-04-06T10-50-05-561Z.yml  page-2026-04-07T10-59-14-398Z.yml  page-2026-04-07T10-59-22-082Z.yml  page-2026-04-07T10-59-27-852Z.yml  page-2026-04-07T10-59-36-227Z.yml  page-2026-04-07T10-59-45-011Z.yml  page-2026-04-07T11-00-36-975Z.yml  page-2026-04-07T11-00-57-441Z.yml  page-2026-04-07T11-04-13-560Z.yml  page-2026-04-07T11-04-35-917Z.yml  page-2026-04-07T19-18-16-258Z.yml  page-2026-04-07T19-18-24-796Z.yml  page-2026-04-07T19-18-25-618Z.yml  page-2026-04-07T19-19-43-817Z.yml
.streamlit/: config.toml
ATRIAN/: .gitignore  ATRiAN_Implementation_Plan.md  EaaS_Integration_Plan.md  README.md  WORK_2025-06-02_Audit_Endpoint_Fix_And_Testing.md  WORK_2025-06-03_Audit_Endpoint_Documentation_And_Repair.md  WORK_2025-06-12_Ethical_Constitution_Templates_MVP.md  __init__.py  atrian_ethical_compass.py  eaas_api.py  eaas_models.py  eaas_persistence.py  emotional_weights.yaml  ethics_rules.yaml  pytest.ini  refactoring_summary_20250603.md  requirements.txt  run_eaas_api_server.py  trust_layer.yaml  usage_stats.json
EGOS_Framework/: README.md  ROADMAP.md
agents/: cli.ts
analysis_results/: egos_git_analysis.csv
archive/: ARCHIVE_STRUCTURE.md
business/: APRESENTACAO_LARA_FELIX.md  CALCULO_CUSTOS_INFRAESTRUTURA.md  DPONET_PRIVACYTOOLS_DEEP_RESEARCH.md  GUARD_BRASIL_MARKET_REPORT.md  INDICE_MATERIAIS_LARA.md  MARKET_RESEARCH_GUARD_BRASIL_2026.md  MELHORIAS_SITE_PRE_APRESENTACAO.md  PROPOSTA_PARCERIA_COMERCIAL.md  SUMARIO_APRESENTACAO_LARA.md  inventory.md
cache/: file_hash_cache.json  file_system_cache.json
config/: api_keys.example.json  directory_structure_config.json  script_standards_definition.yaml  snake_case_audit_config.json  snake_case_convert_config.json  snake_case_convert_test_config.json  tool_registry.json  tool_registry_schema.json
dashboard/: streamlit_app_rewrite.py
docs/: ACTIVATION_FLOW.md  ACTIVATION_GUIDE.md  AGENTS_SSOT.md  AGENT_DEPRECATION_LOG.md  AGENT_GOVERNANCE_RULES.md  AGENT_SWARM_24_7_BLUEPRINT.md  AI_COVERAGE_MAP.md  ARCHITECTURE.MD  ARCHIVE_GEMS_CATALOG.md  BIOS-Q MCP.txt  BLUEPRINT_TASKS_MATRIX.md  BRAND_CANONICAL.md  CAPABILITY_REGISTRY.md  CHERRY_PICK_INVENTORY.md  CLAUDE_CODE_CLI_SETUP.md  CLAUDE_CODE_INTEGRATIONS_MAP.md  CLAUDE_CODE_SKILLS_MASTERY.md  CREDENTIALS_POLICY.md  CROSS_REPO_CONTEXT_ROUTER.md  Competitive_Analysis.md  Cursor X Web limitaçoes.txt  Customer_Journey_Map.md  DEVELOPMENT_TREE_DIAGNOSTIC_2026-03-13.md  DOCS_DIRECTORY_DIAGNOSTIC_20250518.md  DOCTOR_COMMAND_SPEC.md  DOCUMENTATION_ARCHITECTURE_MAP.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DOC_DRIFT_SHIELD.md  ECOSYSTEM_CLASSIFICATION_REGISTRY.md  EGOS 1.0.txt  EGOS-004_COMPLETION_SUMMARY.md  EGOS-111-IMPLEMENTATION-REPORT.md  EGOS1.1 visao geral.txt  EGOS_Business_Plan_v1.0.md  EGOS_CONSOLIDATED_PLAN_v1.0.md  (+158 more)
(+3302 files in other folders)
